parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> classes
Rule 2     classes -> class
Rule 3     classes -> class classes
Rule 4     class -> CLASS TYPE inheritance BLOCK_INIT features_opt BLOCK_END SEMICOLON
Rule 5     inheritance -> INHERITS TYPE
Rule 6     inheritance -> empty
Rule 7     features_opt -> features
Rule 8     features_opt -> empty
Rule 9     features -> feature
Rule 10    features -> feature features
Rule 11    feature -> ID PARENTESIS_INIT formals_opt PARENTESIS_END COLON TYPE BLOCK_INIT expr BLOCK_END SEMICOLON
Rule 12    feature -> attr_def SEMICOLON
Rule 13    attr_defs -> attr_def
Rule 14    attr_defs -> attr_def COMMA attr_defs
Rule 15    attr_def -> ID COLON TYPE assign_opt
Rule 16    assign_opt -> assign
Rule 17    assign_opt -> empty
Rule 18    assign -> ASSIGN expr
Rule 19    formals_opt -> formals
Rule 20    formals_opt -> empty
Rule 21    formals -> formal
Rule 22    formals -> formal COMMA formals
Rule 23    formal -> ID COLON TYPE
Rule 24    params_opt -> params
Rule 25    params_opt -> empty
Rule 26    params -> expr
Rule 27    params -> expr COMMA params
Rule 28    block -> blockelements
Rule 29    blockelements -> expr SEMICOLON
Rule 30    blockelements -> expr SEMICOLON blockelements
Rule 31    typeactions -> typeaction
Rule 32    typeactions -> typeaction typeactions
Rule 33    typeaction -> ID COLON TYPE ACTION expr SEMICOLON
Rule 34    function_call -> ID PARENTESIS_INIT params_opt PARENTESIS_END
Rule 35    targettype_opt -> targettype
Rule 36    targettype_opt -> empty
Rule 37    targettype -> AT TYPE
Rule 38    expr -> SELF
Rule 39    expr -> ID assign
Rule 40    expr -> expr targettype_opt DOT function_call
Rule 41    expr -> function_call
Rule 42    expr -> IF expr THEN expr ELSE expr FI
Rule 43    expr -> WHILE expr LOOP expr POOL
Rule 44    expr -> LET attr_defs IN expr
Rule 45    expr -> CASE expr OF typeactions ESAC
Rule 46    expr -> NEW TYPE
Rule 47    expr -> INT_COMP expr
Rule 48    expr -> NOT expr
Rule 49    expr -> ISVOID expr
Rule 50    expr -> expr PLUS expr
Rule 51    expr -> expr MINUS expr
Rule 52    expr -> expr MULTIPLY expr
Rule 53    expr -> expr DIVIDE expr
Rule 54    expr -> expr LESS_THAN expr
Rule 55    expr -> expr LESS_THAN_OR_EQUAL expr
Rule 56    expr -> expr EQUAL expr
Rule 57    expr -> BLOCK_INIT block BLOCK_END
Rule 58    expr -> PARENTESIS_INIT expr PARENTESIS_END
Rule 59    expr -> ID
Rule 60    expr -> INTEGER
Rule 61    expr -> STRING
Rule 62    expr -> BOOL
Rule 63    empty -> <empty>

Terminals, with rules where they appear

ACTION               : 33
ASSIGN               : 18
AT                   : 37
BLOCK_END            : 4 11 57
BLOCK_INIT           : 4 11 57
BOOL                 : 62
CASE                 : 45
CLASS                : 4
COLON                : 11 15 23 33
COMMA                : 14 22 27
DIVIDE               : 53
DOT                  : 40
ELSE                 : 42
EQUAL                : 56
ESAC                 : 45
FI                   : 42
ID                   : 11 15 23 33 34 39 59
IF                   : 42
IN                   : 44
INHERITS             : 5
INTEGER              : 60
INT_COMP             : 47
ISVOID               : 49
LESS_THAN            : 54
LESS_THAN_OR_EQUAL   : 55
LET                  : 44
LOOP                 : 43
MINUS                : 51
MULTIPLY             : 52
NEW                  : 46
NOT                  : 48
OF                   : 45
PARENTESIS_END       : 11 34 58
PARENTESIS_INIT      : 11 34 58
PLUS                 : 50
POOL                 : 43
SELF                 : 38
SEMICOLON            : 4 11 12 29 30 33
STRING               : 61
THEN                 : 42
TYPE                 : 4 5 11 15 23 33 37 46
WHILE                : 43
error                : 

Nonterminals, with rules where they appear

assign               : 16 39
assign_opt           : 15
attr_def             : 12 13 14
attr_defs            : 14 44
block                : 57
blockelements        : 28 30
class                : 2 3
classes              : 1 3
empty                : 6 8 17 20 25 36
expr                 : 11 18 26 27 29 30 33 40 42 42 42 43 43 44 45 47 48 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 58
feature              : 9 10
features             : 7 10
features_opt         : 4
formal               : 21 22
formals              : 19 22
formals_opt          : 11
function_call        : 40 41
inheritance          : 4
params               : 24 27
params_opt           : 34
program              : 0
targettype           : 35
targettype_opt       : 40
typeaction           : 31 32
typeactions          : 32 45

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . classes
    (2) classes -> . class
    (3) classes -> . class classes
    (4) class -> . CLASS TYPE inheritance BLOCK_INIT features_opt BLOCK_END SEMICOLON

    CLASS           shift and go to state 4

    program                        shift and go to state 1
    classes                        shift and go to state 2
    class                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> classes .

    $end            reduce using rule 1 (program -> classes .)


state 3

    (2) classes -> class .
    (3) classes -> class . classes
    (2) classes -> . class
    (3) classes -> . class classes
    (4) class -> . CLASS TYPE inheritance BLOCK_INIT features_opt BLOCK_END SEMICOLON

    $end            reduce using rule 2 (classes -> class .)
    CLASS           shift and go to state 4

    class                          shift and go to state 3
    classes                        shift and go to state 5

state 4

    (4) class -> CLASS . TYPE inheritance BLOCK_INIT features_opt BLOCK_END SEMICOLON

    TYPE            shift and go to state 6


state 5

    (3) classes -> class classes .

    $end            reduce using rule 3 (classes -> class classes .)


state 6

    (4) class -> CLASS TYPE . inheritance BLOCK_INIT features_opt BLOCK_END SEMICOLON
    (5) inheritance -> . INHERITS TYPE
    (6) inheritance -> . empty
    (63) empty -> .

    INHERITS        shift and go to state 8
    BLOCK_INIT      reduce using rule 63 (empty -> .)

    inheritance                    shift and go to state 7
    empty                          shift and go to state 9

state 7

    (4) class -> CLASS TYPE inheritance . BLOCK_INIT features_opt BLOCK_END SEMICOLON

    BLOCK_INIT      shift and go to state 10


state 8

    (5) inheritance -> INHERITS . TYPE

    TYPE            shift and go to state 11


state 9

    (6) inheritance -> empty .

    BLOCK_INIT      reduce using rule 6 (inheritance -> empty .)


state 10

    (4) class -> CLASS TYPE inheritance BLOCK_INIT . features_opt BLOCK_END SEMICOLON
    (7) features_opt -> . features
    (8) features_opt -> . empty
    (9) features -> . feature
    (10) features -> . feature features
    (63) empty -> .
    (11) feature -> . ID PARENTESIS_INIT formals_opt PARENTESIS_END COLON TYPE BLOCK_INIT expr BLOCK_END SEMICOLON
    (12) feature -> . attr_def SEMICOLON
    (15) attr_def -> . ID COLON TYPE assign_opt

    BLOCK_END       reduce using rule 63 (empty -> .)
    ID              shift and go to state 16

    features_opt                   shift and go to state 12
    features                       shift and go to state 13
    empty                          shift and go to state 14
    feature                        shift and go to state 15
    attr_def                       shift and go to state 17

state 11

    (5) inheritance -> INHERITS TYPE .

    BLOCK_INIT      reduce using rule 5 (inheritance -> INHERITS TYPE .)


state 12

    (4) class -> CLASS TYPE inheritance BLOCK_INIT features_opt . BLOCK_END SEMICOLON

    BLOCK_END       shift and go to state 18


state 13

    (7) features_opt -> features .

    BLOCK_END       reduce using rule 7 (features_opt -> features .)


state 14

    (8) features_opt -> empty .

    BLOCK_END       reduce using rule 8 (features_opt -> empty .)


state 15

    (9) features -> feature .
    (10) features -> feature . features
    (9) features -> . feature
    (10) features -> . feature features
    (11) feature -> . ID PARENTESIS_INIT formals_opt PARENTESIS_END COLON TYPE BLOCK_INIT expr BLOCK_END SEMICOLON
    (12) feature -> . attr_def SEMICOLON
    (15) attr_def -> . ID COLON TYPE assign_opt

    BLOCK_END       reduce using rule 9 (features -> feature .)
    ID              shift and go to state 16

    feature                        shift and go to state 15
    features                       shift and go to state 19
    attr_def                       shift and go to state 17

state 16

    (11) feature -> ID . PARENTESIS_INIT formals_opt PARENTESIS_END COLON TYPE BLOCK_INIT expr BLOCK_END SEMICOLON
    (15) attr_def -> ID . COLON TYPE assign_opt

    PARENTESIS_INIT shift and go to state 20
    COLON           shift and go to state 21


state 17

    (12) feature -> attr_def . SEMICOLON

    SEMICOLON       shift and go to state 22


state 18

    (4) class -> CLASS TYPE inheritance BLOCK_INIT features_opt BLOCK_END . SEMICOLON

    SEMICOLON       shift and go to state 23


state 19

    (10) features -> feature features .

    BLOCK_END       reduce using rule 10 (features -> feature features .)


state 20

    (11) feature -> ID PARENTESIS_INIT . formals_opt PARENTESIS_END COLON TYPE BLOCK_INIT expr BLOCK_END SEMICOLON
    (19) formals_opt -> . formals
    (20) formals_opt -> . empty
    (21) formals -> . formal
    (22) formals -> . formal COMMA formals
    (63) empty -> .
    (23) formal -> . ID COLON TYPE

    PARENTESIS_END  reduce using rule 63 (empty -> .)
    ID              shift and go to state 24

    formals_opt                    shift and go to state 25
    formals                        shift and go to state 26
    empty                          shift and go to state 27
    formal                         shift and go to state 28

state 21

    (15) attr_def -> ID COLON . TYPE assign_opt

    TYPE            shift and go to state 29


state 22

    (12) feature -> attr_def SEMICOLON .

    ID              reduce using rule 12 (feature -> attr_def SEMICOLON .)
    BLOCK_END       reduce using rule 12 (feature -> attr_def SEMICOLON .)


state 23

    (4) class -> CLASS TYPE inheritance BLOCK_INIT features_opt BLOCK_END SEMICOLON .

    CLASS           reduce using rule 4 (class -> CLASS TYPE inheritance BLOCK_INIT features_opt BLOCK_END SEMICOLON .)
    $end            reduce using rule 4 (class -> CLASS TYPE inheritance BLOCK_INIT features_opt BLOCK_END SEMICOLON .)


state 24

    (23) formal -> ID . COLON TYPE

    COLON           shift and go to state 30


state 25

    (11) feature -> ID PARENTESIS_INIT formals_opt . PARENTESIS_END COLON TYPE BLOCK_INIT expr BLOCK_END SEMICOLON

    PARENTESIS_END  shift and go to state 31


state 26

    (19) formals_opt -> formals .

    PARENTESIS_END  reduce using rule 19 (formals_opt -> formals .)


state 27

    (20) formals_opt -> empty .

    PARENTESIS_END  reduce using rule 20 (formals_opt -> empty .)


state 28

    (21) formals -> formal .
    (22) formals -> formal . COMMA formals

    PARENTESIS_END  reduce using rule 21 (formals -> formal .)
    COMMA           shift and go to state 32


state 29

    (15) attr_def -> ID COLON TYPE . assign_opt
    (16) assign_opt -> . assign
    (17) assign_opt -> . empty
    (18) assign -> . ASSIGN expr
    (63) empty -> .

    ASSIGN          shift and go to state 36
    SEMICOLON       reduce using rule 63 (empty -> .)
    COMMA           reduce using rule 63 (empty -> .)
    IN              reduce using rule 63 (empty -> .)

    assign_opt                     shift and go to state 33
    assign                         shift and go to state 34
    empty                          shift and go to state 35

state 30

    (23) formal -> ID COLON . TYPE

    TYPE            shift and go to state 37


state 31

    (11) feature -> ID PARENTESIS_INIT formals_opt PARENTESIS_END . COLON TYPE BLOCK_INIT expr BLOCK_END SEMICOLON

    COLON           shift and go to state 38


state 32

    (22) formals -> formal COMMA . formals
    (21) formals -> . formal
    (22) formals -> . formal COMMA formals
    (23) formal -> . ID COLON TYPE

    ID              shift and go to state 24

    formal                         shift and go to state 28
    formals                        shift and go to state 39

state 33

    (15) attr_def -> ID COLON TYPE assign_opt .

    SEMICOLON       reduce using rule 15 (attr_def -> ID COLON TYPE assign_opt .)
    COMMA           reduce using rule 15 (attr_def -> ID COLON TYPE assign_opt .)
    IN              reduce using rule 15 (attr_def -> ID COLON TYPE assign_opt .)


state 34

    (16) assign_opt -> assign .

    SEMICOLON       reduce using rule 16 (assign_opt -> assign .)
    COMMA           reduce using rule 16 (assign_opt -> assign .)
    IN              reduce using rule 16 (assign_opt -> assign .)


state 35

    (17) assign_opt -> empty .

    SEMICOLON       reduce using rule 17 (assign_opt -> empty .)
    COMMA           reduce using rule 17 (assign_opt -> empty .)
    IN              reduce using rule 17 (assign_opt -> empty .)


state 36

    (18) assign -> ASSIGN . expr
    (38) expr -> . SELF
    (39) expr -> . ID assign
    (40) expr -> . expr targettype_opt DOT function_call
    (41) expr -> . function_call
    (42) expr -> . IF expr THEN expr ELSE expr FI
    (43) expr -> . WHILE expr LOOP expr POOL
    (44) expr -> . LET attr_defs IN expr
    (45) expr -> . CASE expr OF typeactions ESAC
    (46) expr -> . NEW TYPE
    (47) expr -> . INT_COMP expr
    (48) expr -> . NOT expr
    (49) expr -> . ISVOID expr
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr MINUS expr
    (52) expr -> . expr MULTIPLY expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr LESS_THAN expr
    (55) expr -> . expr LESS_THAN_OR_EQUAL expr
    (56) expr -> . expr EQUAL expr
    (57) expr -> . BLOCK_INIT block BLOCK_END
    (58) expr -> . PARENTESIS_INIT expr PARENTESIS_END
    (59) expr -> . ID
    (60) expr -> . INTEGER
    (61) expr -> . STRING
    (62) expr -> . BOOL
    (34) function_call -> . ID PARENTESIS_INIT params_opt PARENTESIS_END

    SELF            shift and go to state 41
    ID              shift and go to state 42
    IF              shift and go to state 44
    WHILE           shift and go to state 45
    LET             shift and go to state 46
    CASE            shift and go to state 47
    NEW             shift and go to state 48
    INT_COMP        shift and go to state 49
    NOT             shift and go to state 50
    ISVOID          shift and go to state 51
    BLOCK_INIT      shift and go to state 52
    PARENTESIS_INIT shift and go to state 53
    INTEGER         shift and go to state 54
    STRING          shift and go to state 55
    BOOL            shift and go to state 56

    expr                           shift and go to state 40
    function_call                  shift and go to state 43

state 37

    (23) formal -> ID COLON TYPE .

    COMMA           reduce using rule 23 (formal -> ID COLON TYPE .)
    PARENTESIS_END  reduce using rule 23 (formal -> ID COLON TYPE .)


state 38

    (11) feature -> ID PARENTESIS_INIT formals_opt PARENTESIS_END COLON . TYPE BLOCK_INIT expr BLOCK_END SEMICOLON

    TYPE            shift and go to state 57


state 39

    (22) formals -> formal COMMA formals .

    PARENTESIS_END  reduce using rule 22 (formals -> formal COMMA formals .)


state 40

    (18) assign -> ASSIGN expr .
    (40) expr -> expr . targettype_opt DOT function_call
    (50) expr -> expr . PLUS expr
    (51) expr -> expr . MINUS expr
    (52) expr -> expr . MULTIPLY expr
    (53) expr -> expr . DIVIDE expr
    (54) expr -> expr . LESS_THAN expr
    (55) expr -> expr . LESS_THAN_OR_EQUAL expr
    (56) expr -> expr . EQUAL expr
    (35) targettype_opt -> . targettype
    (36) targettype_opt -> . empty
    (37) targettype -> . AT TYPE
    (63) empty -> .

  ! reduce/reduce conflict for DOT resolved using rule 18 (assign -> ASSIGN expr .)
    SEMICOLON       reduce using rule 18 (assign -> ASSIGN expr .)
    COMMA           reduce using rule 18 (assign -> ASSIGN expr .)
    IN              reduce using rule 18 (assign -> ASSIGN expr .)
    DOT             reduce using rule 18 (assign -> ASSIGN expr .)
    THEN            reduce using rule 18 (assign -> ASSIGN expr .)
    LOOP            reduce using rule 18 (assign -> ASSIGN expr .)
    OF              reduce using rule 18 (assign -> ASSIGN expr .)
    PARENTESIS_END  reduce using rule 18 (assign -> ASSIGN expr .)
    BLOCK_END       reduce using rule 18 (assign -> ASSIGN expr .)
    ELSE            reduce using rule 18 (assign -> ASSIGN expr .)
    POOL            reduce using rule 18 (assign -> ASSIGN expr .)
    FI              reduce using rule 18 (assign -> ASSIGN expr .)
    PLUS            shift and go to state 59
    MINUS           shift and go to state 60
    MULTIPLY        shift and go to state 61
    DIVIDE          shift and go to state 62
    LESS_THAN       shift and go to state 63
    LESS_THAN_OR_EQUAL shift and go to state 64
    EQUAL           shift and go to state 65
    AT              shift and go to state 68

  ! PLUS            [ reduce using rule 18 (assign -> ASSIGN expr .) ]
  ! MINUS           [ reduce using rule 18 (assign -> ASSIGN expr .) ]
  ! MULTIPLY        [ reduce using rule 18 (assign -> ASSIGN expr .) ]
  ! DIVIDE          [ reduce using rule 18 (assign -> ASSIGN expr .) ]
  ! LESS_THAN       [ reduce using rule 18 (assign -> ASSIGN expr .) ]
  ! LESS_THAN_OR_EQUAL [ reduce using rule 18 (assign -> ASSIGN expr .) ]
  ! EQUAL           [ reduce using rule 18 (assign -> ASSIGN expr .) ]
  ! AT              [ reduce using rule 18 (assign -> ASSIGN expr .) ]
  ! DOT             [ reduce using rule 63 (empty -> .) ]

    targettype_opt                 shift and go to state 58
    targettype                     shift and go to state 66
    empty                          shift and go to state 67

state 41

    (38) expr -> SELF .

    PLUS            reduce using rule 38 (expr -> SELF .)
    MINUS           reduce using rule 38 (expr -> SELF .)
    MULTIPLY        reduce using rule 38 (expr -> SELF .)
    DIVIDE          reduce using rule 38 (expr -> SELF .)
    LESS_THAN       reduce using rule 38 (expr -> SELF .)
    LESS_THAN_OR_EQUAL reduce using rule 38 (expr -> SELF .)
    EQUAL           reduce using rule 38 (expr -> SELF .)
    AT              reduce using rule 38 (expr -> SELF .)
    DOT             reduce using rule 38 (expr -> SELF .)
    SEMICOLON       reduce using rule 38 (expr -> SELF .)
    COMMA           reduce using rule 38 (expr -> SELF .)
    IN              reduce using rule 38 (expr -> SELF .)
    THEN            reduce using rule 38 (expr -> SELF .)
    LOOP            reduce using rule 38 (expr -> SELF .)
    OF              reduce using rule 38 (expr -> SELF .)
    PARENTESIS_END  reduce using rule 38 (expr -> SELF .)
    BLOCK_END       reduce using rule 38 (expr -> SELF .)
    ELSE            reduce using rule 38 (expr -> SELF .)
    POOL            reduce using rule 38 (expr -> SELF .)
    FI              reduce using rule 38 (expr -> SELF .)


state 42

    (39) expr -> ID . assign
    (59) expr -> ID .
    (34) function_call -> ID . PARENTESIS_INIT params_opt PARENTESIS_END
    (18) assign -> . ASSIGN expr

    PLUS            reduce using rule 59 (expr -> ID .)
    MINUS           reduce using rule 59 (expr -> ID .)
    MULTIPLY        reduce using rule 59 (expr -> ID .)
    DIVIDE          reduce using rule 59 (expr -> ID .)
    LESS_THAN       reduce using rule 59 (expr -> ID .)
    LESS_THAN_OR_EQUAL reduce using rule 59 (expr -> ID .)
    EQUAL           reduce using rule 59 (expr -> ID .)
    AT              reduce using rule 59 (expr -> ID .)
    DOT             reduce using rule 59 (expr -> ID .)
    SEMICOLON       reduce using rule 59 (expr -> ID .)
    COMMA           reduce using rule 59 (expr -> ID .)
    IN              reduce using rule 59 (expr -> ID .)
    THEN            reduce using rule 59 (expr -> ID .)
    LOOP            reduce using rule 59 (expr -> ID .)
    OF              reduce using rule 59 (expr -> ID .)
    PARENTESIS_END  reduce using rule 59 (expr -> ID .)
    BLOCK_END       reduce using rule 59 (expr -> ID .)
    ELSE            reduce using rule 59 (expr -> ID .)
    POOL            reduce using rule 59 (expr -> ID .)
    FI              reduce using rule 59 (expr -> ID .)
    PARENTESIS_INIT shift and go to state 70
    ASSIGN          shift and go to state 36

    assign                         shift and go to state 69

state 43

    (41) expr -> function_call .

    PLUS            reduce using rule 41 (expr -> function_call .)
    MINUS           reduce using rule 41 (expr -> function_call .)
    MULTIPLY        reduce using rule 41 (expr -> function_call .)
    DIVIDE          reduce using rule 41 (expr -> function_call .)
    LESS_THAN       reduce using rule 41 (expr -> function_call .)
    LESS_THAN_OR_EQUAL reduce using rule 41 (expr -> function_call .)
    EQUAL           reduce using rule 41 (expr -> function_call .)
    AT              reduce using rule 41 (expr -> function_call .)
    DOT             reduce using rule 41 (expr -> function_call .)
    SEMICOLON       reduce using rule 41 (expr -> function_call .)
    COMMA           reduce using rule 41 (expr -> function_call .)
    IN              reduce using rule 41 (expr -> function_call .)
    THEN            reduce using rule 41 (expr -> function_call .)
    LOOP            reduce using rule 41 (expr -> function_call .)
    OF              reduce using rule 41 (expr -> function_call .)
    PARENTESIS_END  reduce using rule 41 (expr -> function_call .)
    BLOCK_END       reduce using rule 41 (expr -> function_call .)
    ELSE            reduce using rule 41 (expr -> function_call .)
    POOL            reduce using rule 41 (expr -> function_call .)
    FI              reduce using rule 41 (expr -> function_call .)


state 44

    (42) expr -> IF . expr THEN expr ELSE expr FI
    (38) expr -> . SELF
    (39) expr -> . ID assign
    (40) expr -> . expr targettype_opt DOT function_call
    (41) expr -> . function_call
    (42) expr -> . IF expr THEN expr ELSE expr FI
    (43) expr -> . WHILE expr LOOP expr POOL
    (44) expr -> . LET attr_defs IN expr
    (45) expr -> . CASE expr OF typeactions ESAC
    (46) expr -> . NEW TYPE
    (47) expr -> . INT_COMP expr
    (48) expr -> . NOT expr
    (49) expr -> . ISVOID expr
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr MINUS expr
    (52) expr -> . expr MULTIPLY expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr LESS_THAN expr
    (55) expr -> . expr LESS_THAN_OR_EQUAL expr
    (56) expr -> . expr EQUAL expr
    (57) expr -> . BLOCK_INIT block BLOCK_END
    (58) expr -> . PARENTESIS_INIT expr PARENTESIS_END
    (59) expr -> . ID
    (60) expr -> . INTEGER
    (61) expr -> . STRING
    (62) expr -> . BOOL
    (34) function_call -> . ID PARENTESIS_INIT params_opt PARENTESIS_END

    SELF            shift and go to state 41
    ID              shift and go to state 42
    IF              shift and go to state 44
    WHILE           shift and go to state 45
    LET             shift and go to state 46
    CASE            shift and go to state 47
    NEW             shift and go to state 48
    INT_COMP        shift and go to state 49
    NOT             shift and go to state 50
    ISVOID          shift and go to state 51
    BLOCK_INIT      shift and go to state 52
    PARENTESIS_INIT shift and go to state 53
    INTEGER         shift and go to state 54
    STRING          shift and go to state 55
    BOOL            shift and go to state 56

    expr                           shift and go to state 71
    function_call                  shift and go to state 43

state 45

    (43) expr -> WHILE . expr LOOP expr POOL
    (38) expr -> . SELF
    (39) expr -> . ID assign
    (40) expr -> . expr targettype_opt DOT function_call
    (41) expr -> . function_call
    (42) expr -> . IF expr THEN expr ELSE expr FI
    (43) expr -> . WHILE expr LOOP expr POOL
    (44) expr -> . LET attr_defs IN expr
    (45) expr -> . CASE expr OF typeactions ESAC
    (46) expr -> . NEW TYPE
    (47) expr -> . INT_COMP expr
    (48) expr -> . NOT expr
    (49) expr -> . ISVOID expr
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr MINUS expr
    (52) expr -> . expr MULTIPLY expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr LESS_THAN expr
    (55) expr -> . expr LESS_THAN_OR_EQUAL expr
    (56) expr -> . expr EQUAL expr
    (57) expr -> . BLOCK_INIT block BLOCK_END
    (58) expr -> . PARENTESIS_INIT expr PARENTESIS_END
    (59) expr -> . ID
    (60) expr -> . INTEGER
    (61) expr -> . STRING
    (62) expr -> . BOOL
    (34) function_call -> . ID PARENTESIS_INIT params_opt PARENTESIS_END

    SELF            shift and go to state 41
    ID              shift and go to state 42
    IF              shift and go to state 44
    WHILE           shift and go to state 45
    LET             shift and go to state 46
    CASE            shift and go to state 47
    NEW             shift and go to state 48
    INT_COMP        shift and go to state 49
    NOT             shift and go to state 50
    ISVOID          shift and go to state 51
    BLOCK_INIT      shift and go to state 52
    PARENTESIS_INIT shift and go to state 53
    INTEGER         shift and go to state 54
    STRING          shift and go to state 55
    BOOL            shift and go to state 56

    expr                           shift and go to state 72
    function_call                  shift and go to state 43

state 46

    (44) expr -> LET . attr_defs IN expr
    (13) attr_defs -> . attr_def
    (14) attr_defs -> . attr_def COMMA attr_defs
    (15) attr_def -> . ID COLON TYPE assign_opt

    ID              shift and go to state 75

    attr_defs                      shift and go to state 73
    attr_def                       shift and go to state 74

state 47

    (45) expr -> CASE . expr OF typeactions ESAC
    (38) expr -> . SELF
    (39) expr -> . ID assign
    (40) expr -> . expr targettype_opt DOT function_call
    (41) expr -> . function_call
    (42) expr -> . IF expr THEN expr ELSE expr FI
    (43) expr -> . WHILE expr LOOP expr POOL
    (44) expr -> . LET attr_defs IN expr
    (45) expr -> . CASE expr OF typeactions ESAC
    (46) expr -> . NEW TYPE
    (47) expr -> . INT_COMP expr
    (48) expr -> . NOT expr
    (49) expr -> . ISVOID expr
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr MINUS expr
    (52) expr -> . expr MULTIPLY expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr LESS_THAN expr
    (55) expr -> . expr LESS_THAN_OR_EQUAL expr
    (56) expr -> . expr EQUAL expr
    (57) expr -> . BLOCK_INIT block BLOCK_END
    (58) expr -> . PARENTESIS_INIT expr PARENTESIS_END
    (59) expr -> . ID
    (60) expr -> . INTEGER
    (61) expr -> . STRING
    (62) expr -> . BOOL
    (34) function_call -> . ID PARENTESIS_INIT params_opt PARENTESIS_END

    SELF            shift and go to state 41
    ID              shift and go to state 42
    IF              shift and go to state 44
    WHILE           shift and go to state 45
    LET             shift and go to state 46
    CASE            shift and go to state 47
    NEW             shift and go to state 48
    INT_COMP        shift and go to state 49
    NOT             shift and go to state 50
    ISVOID          shift and go to state 51
    BLOCK_INIT      shift and go to state 52
    PARENTESIS_INIT shift and go to state 53
    INTEGER         shift and go to state 54
    STRING          shift and go to state 55
    BOOL            shift and go to state 56

    expr                           shift and go to state 76
    function_call                  shift and go to state 43

state 48

    (46) expr -> NEW . TYPE

    TYPE            shift and go to state 77


state 49

    (47) expr -> INT_COMP . expr
    (38) expr -> . SELF
    (39) expr -> . ID assign
    (40) expr -> . expr targettype_opt DOT function_call
    (41) expr -> . function_call
    (42) expr -> . IF expr THEN expr ELSE expr FI
    (43) expr -> . WHILE expr LOOP expr POOL
    (44) expr -> . LET attr_defs IN expr
    (45) expr -> . CASE expr OF typeactions ESAC
    (46) expr -> . NEW TYPE
    (47) expr -> . INT_COMP expr
    (48) expr -> . NOT expr
    (49) expr -> . ISVOID expr
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr MINUS expr
    (52) expr -> . expr MULTIPLY expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr LESS_THAN expr
    (55) expr -> . expr LESS_THAN_OR_EQUAL expr
    (56) expr -> . expr EQUAL expr
    (57) expr -> . BLOCK_INIT block BLOCK_END
    (58) expr -> . PARENTESIS_INIT expr PARENTESIS_END
    (59) expr -> . ID
    (60) expr -> . INTEGER
    (61) expr -> . STRING
    (62) expr -> . BOOL
    (34) function_call -> . ID PARENTESIS_INIT params_opt PARENTESIS_END

    SELF            shift and go to state 41
    ID              shift and go to state 42
    IF              shift and go to state 44
    WHILE           shift and go to state 45
    LET             shift and go to state 46
    CASE            shift and go to state 47
    NEW             shift and go to state 48
    INT_COMP        shift and go to state 49
    NOT             shift and go to state 50
    ISVOID          shift and go to state 51
    BLOCK_INIT      shift and go to state 52
    PARENTESIS_INIT shift and go to state 53
    INTEGER         shift and go to state 54
    STRING          shift and go to state 55
    BOOL            shift and go to state 56

    expr                           shift and go to state 78
    function_call                  shift and go to state 43

state 50

    (48) expr -> NOT . expr
    (38) expr -> . SELF
    (39) expr -> . ID assign
    (40) expr -> . expr targettype_opt DOT function_call
    (41) expr -> . function_call
    (42) expr -> . IF expr THEN expr ELSE expr FI
    (43) expr -> . WHILE expr LOOP expr POOL
    (44) expr -> . LET attr_defs IN expr
    (45) expr -> . CASE expr OF typeactions ESAC
    (46) expr -> . NEW TYPE
    (47) expr -> . INT_COMP expr
    (48) expr -> . NOT expr
    (49) expr -> . ISVOID expr
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr MINUS expr
    (52) expr -> . expr MULTIPLY expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr LESS_THAN expr
    (55) expr -> . expr LESS_THAN_OR_EQUAL expr
    (56) expr -> . expr EQUAL expr
    (57) expr -> . BLOCK_INIT block BLOCK_END
    (58) expr -> . PARENTESIS_INIT expr PARENTESIS_END
    (59) expr -> . ID
    (60) expr -> . INTEGER
    (61) expr -> . STRING
    (62) expr -> . BOOL
    (34) function_call -> . ID PARENTESIS_INIT params_opt PARENTESIS_END

    SELF            shift and go to state 41
    ID              shift and go to state 42
    IF              shift and go to state 44
    WHILE           shift and go to state 45
    LET             shift and go to state 46
    CASE            shift and go to state 47
    NEW             shift and go to state 48
    INT_COMP        shift and go to state 49
    NOT             shift and go to state 50
    ISVOID          shift and go to state 51
    BLOCK_INIT      shift and go to state 52
    PARENTESIS_INIT shift and go to state 53
    INTEGER         shift and go to state 54
    STRING          shift and go to state 55
    BOOL            shift and go to state 56

    expr                           shift and go to state 79
    function_call                  shift and go to state 43

state 51

    (49) expr -> ISVOID . expr
    (38) expr -> . SELF
    (39) expr -> . ID assign
    (40) expr -> . expr targettype_opt DOT function_call
    (41) expr -> . function_call
    (42) expr -> . IF expr THEN expr ELSE expr FI
    (43) expr -> . WHILE expr LOOP expr POOL
    (44) expr -> . LET attr_defs IN expr
    (45) expr -> . CASE expr OF typeactions ESAC
    (46) expr -> . NEW TYPE
    (47) expr -> . INT_COMP expr
    (48) expr -> . NOT expr
    (49) expr -> . ISVOID expr
    (50) expr -> . expr PLUS expr
    (51) expr -> . expr MINUS expr
    (52) expr -> . expr MULTIPLY expr
    (53) expr -> . expr DIVIDE expr
    (54) expr -> . expr LESS_THAN expr
    (55) expr -> . expr LESS_THAN_OR_EQUAL expr
    (56) expr -> . expr EQUAL expr
    (57) expr -> . BLOCK_INIT block BLOCK_END
    (58) expr -> . PARENTESIS_INIT expr PARENTESIS_END
    (59) expr -> . ID
    (60) expr -> . INTEGER
    (61) expr -> . STRING
    (62) expr -> . BOOL
    (34) function_call -> . ID PARENTESIS_INIT params_opt PARENTESIS_END
